--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/classesAuxiliares.css">
     <title>Doces Delícias | Confeitaria</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container flex">
+            <div class="logomarca w50"><a href="">Doces Delícias</a></div>
+            <nav class="w50">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+        </div><!--container-->
+    </header>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
