Criação do Menu mobile, marcação HTML e estilização.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
     <header>
         <div class="container flex">
             <div class="logomarca w50"><a href="">Doces Delícias</a></div>
-            <nav class="w50">
+            <nav class="menu-desktop w50">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Sobre</a></li>
                     <li><a href="">Galeria</a></li>
                     <li><a href="">Contato</a></li>
                 </ul>
-            </nav>
+            </nav><!--menu-desktop-->
+            
+            <nav class="menu-mobile">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav><!--menu-desktop-->
         </div><!--container-->
     </header>
 
+    
+    <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
