Organizados arquivos css por sessões; Criado banner principal com imagem e overlay rosa com gradiente por cima.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/banner-principal.css">
     <link rel="stylesheet" href="./css/classesAuxiliares.css">
     <title>Doces Delícias | Confeitaria</title>
 </head>
@@ -31,6 +32,10 @@
             </nav><!--menu-desktop-->
         </div><!--container-->
     </header>
+
+    <section class="banner-principal">
+        <div class="overlay"></div>
+    </section><!--banner-principal-->
 
     
     <script src="./js/jquery-3.6.0.min.js"></script>
