Esboçando a primeira sessao após o banner principal. Implantando interfaçe responsiva.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/banner-principal.css">
+    <link rel="stylesheet" href="./css/sessao1.css">
     <link rel="stylesheet" href="./css/classesAuxiliares.css">
     <title>Doces Delícias | Confeitaria</title>
 </head>
@@ -34,8 +35,13 @@
     </header>
 
     <section class="banner-principal">
-        <div class="overlay"></div>
+        <div class="overlay"></div><!--overlay-->
     </section><!--banner-principal-->
+
+    <section class="sessao1">
+        <div class="sessao1-left"></div><!--sessao1-left-->
+        <div class="sessao1-right"></div><!--sessao1-left-->
+    </section><!--sessao1-->
 
     
     <script src="./js/jquery-3.6.0.min.js"></script>
